--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,10 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "react-app-polyfill": "^1.0.0"
+    "core-js": "^3.1.4",
+    "react-app-polyfill": "^1.0.0",
+    "react-live": "^2.1.2",
+    "styled-components": "^4.3.2"
   },
   "alias": {
     "react": "../node_modules/react",
