--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --public-url /react-device-frames"
   },
   "dependencies": {
     "core-js": "^3.1.4",
@@ -21,7 +21,6 @@
   "devDependencies": {
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
-    "gh-pages": "^2.0.1",
     "parcel": "^1.12.3",
     "typescript": "^3.4.5"
   }
